--- a/timeline.html
+++ b/timeline.html
@@ -18,80 +18,118 @@
         border-radius: 3%;
         background-size: cover;
       }
+      .timeline-section {
+        position: relative;
+      }
+      .timeline-section::after {
+        content: '';
+        position: absolute;
+        top: 0px;
+        bottom: 0px;
+        width: 3px;
+        background-color: #ccc;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+      .timeline-pointer {
+        position: relative;
+      }
+      .timeline-pointer::after {
+        content: '';
+        position: absolute;
+        top: 0px;
+        bottom: 0px;
+        width: 10px;
+        height: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: #fff;
+        border-radius: 50%;
+        border: 3px solid #ccc;
+        z-index: 1;
+      }
+      @media (max-width: 576px) {
+        .timeline-section::after,
+        .timeline-pointer::after {
+          display: none;
+        }
+      }
     </style>
   </head>
   <body>
     <div class="container">
-      <div class="row my-4">
-        <div class="col-sm-6">
-          <h3>Lorem, ipsum dolor.</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, tenetur corporis. Perferendis, nobis commodi
-            earum excepturi omnis maxime aliquid quisquam soluta provident a praesentium, quis autem ut voluptas impedit
-            beatae.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quia accusantium vero asperiores ullam sunt
-            officiis excepturi, reprehenderit maiores culpa molestias laudantium. Dolore architecto eos fuga, placeat
-            voluptates impedit doloribus?
-          </p>
+      <div class="timeline-section">
+        <div class="row my-4 timeline-pointer">
+          <div class="col-sm-6">
+            <h3>Lorem, ipsum dolor.</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, tenetur corporis. Perferendis, nobis commodi
+              earum excepturi omnis maxime aliquid quisquam soluta provident a praesentium, quis autem ut voluptas
+              impedit beatae.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quia accusantium vero asperiores ullam
+              sunt officiis excepturi, reprehenderit maiores culpa molestias laudantium. Dolore architecto eos fuga,
+              placeat voluptates impedit doloribus?
+            </p>
+          </div>
+          <div class="col-sm-6 ">
+            <div class="box " style="background-image: url(https://picsum.photos/350)"></div>
+          </div>
         </div>
-        <div class="col-sm-6 ">
-          <div class="box " style="background-image: url(https://picsum.photos/350)"></div>
+        <div class="row flex-row-reverse my-4 timeline-pointer">
+          <div class="col-sm-6">
+            <h3>Lorem, ipsum dolor.</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, tenetur corporis. Perferendis, nobis commodi
+              earum excepturi omnis maxime aliquid quisquam soluta provident a praesentium, quis autem ut voluptas
+              impedit beatae.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quia accusantium vero asperiores ullam
+              sunt officiis excepturi, reprehenderit maiores culpa molestias laudantium. Dolore architecto eos fuga,
+              placeat voluptates impedit doloribus?
+            </p>
+          </div>
+          <div class="col-sm-6 ">
+            <div class="box" style="background-image: url(https://picsum.photos/350?)"></div>
+          </div>
         </div>
-      </div>
-      <div class="row flex-row-reverse my-4">
-        <div class="col-sm-6">
-          <h3>Lorem, ipsum dolor.</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, tenetur corporis. Perferendis, nobis commodi
-            earum excepturi omnis maxime aliquid quisquam soluta provident a praesentium, quis autem ut voluptas impedit
-            beatae.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quia accusantium vero asperiores ullam sunt
-            officiis excepturi, reprehenderit maiores culpa molestias laudantium. Dolore architecto eos fuga, placeat
-            voluptates impedit doloribus?
-          </p>
+        <div class="row flex-row my-4 timeline-pointer">
+          <div class="col-sm-6">
+            <h3>Lorem, ipsum dolor.</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, tenetur corporis. Perferendis, nobis commodi
+              earum excepturi omnis maxime aliquid quisquam soluta provident a praesentium, quis autem ut voluptas
+              impedit beatae.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quia accusantium vero asperiores ullam
+              sunt officiis excepturi, reprehenderit maiores culpa molestias laudantium. Dolore architecto eos fuga,
+              placeat voluptates impedit doloribus?
+            </p>
+          </div>
+          <div class="col-sm-6">
+            <div class="box" style="background-image: url(https://picsum.photos/350??)"></div>
+          </div>
         </div>
-        <div class="col-sm-6 ">
-          <div class="box" style="background-image: url(https://picsum.photos/350?)"></div>
-        </div>
-      </div>
-      <div class="row flex-row my-4">
-        <div class="col-sm-6">
-          <h3>Lorem, ipsum dolor.</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, tenetur corporis. Perferendis, nobis commodi
-            earum excepturi omnis maxime aliquid quisquam soluta provident a praesentium, quis autem ut voluptas impedit
-            beatae.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quia accusantium vero asperiores ullam sunt
-            officiis excepturi, reprehenderit maiores culpa molestias laudantium. Dolore architecto eos fuga, placeat
-            voluptates impedit doloribus?
-          </p>
-        </div>
-        <div class="col-sm-6">
-          <div class="box" style="background-image: url(https://picsum.photos/350??)"></div>
-        </div>
-      </div>
-      <div class="row flex-row-reverse my-4">
-        <div class="col-sm-6">
-          <h3>Lorem, ipsum dolor.</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, tenetur corporis. Perferendis, nobis commodi
-            earum excepturi omnis maxime aliquid quisquam soluta provident a praesentium, quis autem ut voluptas impedit
-            beatae.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quia accusantium vero asperiores ullam sunt
-            officiis excepturi, reprehenderit maiores culpa molestias laudantium. Dolore architecto eos fuga, placeat
-            voluptates impedit doloribus?
-          </p>
-        </div>
-        <div class="col-sm-6">
-          <div class="box" style="background-image: url(https://picsum.photos/350???)"></div>
+        <div class="row flex-row-reverse my-4 timeline-pointer">
+          <div class="col-sm-6">
+            <h3>Lorem, ipsum dolor.</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, tenetur corporis. Perferendis, nobis commodi
+              earum excepturi omnis maxime aliquid quisquam soluta provident a praesentium, quis autem ut voluptas
+              impedit beatae.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quia accusantium vero asperiores ullam
+              sunt officiis excepturi, reprehenderit maiores culpa molestias laudantium. Dolore architecto eos fuga,
+              placeat voluptates impedit doloribus?
+            </p>
+          </div>
+          <div class="col-sm-6">
+            <div class="box" style="background-image: url(https://picsum.photos/350???)"></div>
+          </div>
         </div>
       </div>
     </div>
