--- a/content/typography.html
+++ b/content/typography.html
@@ -142,10 +142,10 @@
 <h4>行內</h4>
 
 <div class="demo">
-  <ul class="練習">
-    <li class="練習">This is a list item.</li>
-    <li class="練習">And another one.</li>
-    <li class="練習">But they're displayed inline.</li>
+  <ul class="list-inline">
+    <li class="list-inline-item">This is a list item.</li>
+    <li class="list-inline-item">And another one.</li>
+    <li class="list-inline-item">But they're displayed inline.</li>
   </ul>
 </div>
 
