--- a/content/figures.html
+++ b/content/figures.html
@@ -6,9 +6,9 @@
 
 <div class="demo">
   <!-- 加入 figure 及 figure-caption -->
-  <figure class="練習">
+  <figure class="figure">
     <img src="https://images.unsplash.com/photo-1580912534328-fbc00d6f7e9f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=747&q=80" class="figure-img img-fluid rounded" alt="..." style="width: 400px; height: 300px; object-fit: cover;">
-    <figcaption class="練習">A caption for the above image.</figcaption>
+    <figcaption class="figure-caption">A caption for the above image.</figcaption>
   </figure>
 </div>
 
@@ -18,7 +18,7 @@
   <!-- 使用 text-center, text-end 來對齊它 -->
   <figure class="figure">
     <img src="https://images.unsplash.com/photo-1580912534328-fbc00d6f7e9f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=747&q=80" class="figure-img img-fluid rounded" alt="..." style="width: 400px; height: 300px; object-fit: cover;">
-    <figcaption class="figure-caption 練習">A caption for the above image.</figcaption>
+    <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
   </figure>
 </div>
 
