--- a/content/tables.html
+++ b/content/tables.html
@@ -16,7 +16,7 @@
 </h4>
 
 <div class="demo">
-  <table 練習>
+  <table class="table">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -78,42 +78,42 @@ $theme-colors: (
         <td>Cell</td>
         <td>Cell</td>
       </tr>
-      <tr class=練習-primary">
+      <tr class="table-primary">
         <th scope="row">Primary</th>
         <td>Cell</td>
         <td>Cell</td>
       </tr>
-      <tr 練習>
+      <tr class="table-secondary">
         <th scope="row">Secondary</th>
         <td>Cell</td>
         <td>Cell</td>
       </tr>
-      <tr 練習>
+      <tr class="table-success">
         <th scope="row">Success</th>
         <td>Cell</td>
         <td>Cell</td>
       </tr>
-      <tr 練習>
+      <tr class="table-danger">
         <th scope="row">Danger</th>
         <td>Cell</td>
         <td>Cell</td>
       </tr>
-      <tr 練習>
+      <tr class="table-warning">
         <th scope="row">Warning</th>
         <td>Cell</td>
         <td>Cell</td>
       </tr>
-      <tr 練習>
+      <tr class="table-info">
         <th scope="row">Info</th>
         <td>Cell</td>
         <td>Cell</td>
       </tr>
-      <tr 練習>
+      <tr class="table-light">
         <th scope="row">Light</th>
         <td>Cell</td>
         <td>Cell</td>
       </tr>
-      <tr 練習>
+      <tr class="table-dark">
         <th scope="row">Dark</th>
         <td>Cell</td>
         <td>Cell</td>
@@ -131,7 +131,7 @@ $theme-colors: (
 </h6>
 
 <div class="demo">
-  <table class="table 練習">
+  <table class="table table-striped">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -165,7 +165,7 @@ $theme-colors: (
 <h6>這些 class 也可以添加到情境色彩中：</h6>
 
 <div class="demo">
-  <table class="table 練習 table-striped">
+  <table class="table table-primary table-striped">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -203,7 +203,7 @@ $theme-colors: (
 </h6>
 
 <div class="demo">
-  <table class="table 練習">
+  <table class="table table-hover">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -237,7 +237,7 @@ $theme-colors: (
 <p>同樣可套用在情境色彩上</p>
 
 <div class="demo">
-  <table class="table 練習 table-hover">
+  <table class="table table-success table-hover">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -271,7 +271,7 @@ $theme-colors: (
 <h6>這些可滑入行也可以和條紋行的變數結合使用。</h6>
 
 <div class="demo">
-  <table class="table 練習 table-hover">
+  <table class="table table-striped table-hover">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -316,7 +316,7 @@ $theme-colors: (
       </tr>
     </thead>
     <tbody>
-      <tr class="練習">
+      <tr class="table-active">
         <th scope="row">1</th>
         <td>Mark</td>
         <td>Otto</td>
@@ -342,7 +342,7 @@ $theme-colors: (
 <h6>使用 <code>.table-bordered</code> 在表格和儲存格的四邊上添加邊框。</h6>
 
 <div class="demo">
-  <table class="table 練習">
+  <table class="table table-bordered">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -378,7 +378,7 @@ $theme-colors: (
 <p>參考知識：<a href="https://bootstrap5.hexschool.com/docs/5.0/utilities/borders/" target="_blank">https://bootstrap5.hexschool.com/docs/5.0/utilities/borders/</a></p>
 
 <div class="demo">
-  <table class="table table-bordered 練習">
+  <table class="table table-bordered border-danger">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -413,7 +413,7 @@ $theme-colors: (
 <h6>使用 <code>.table-borderless</code> 使表格呈現無外部邊框。</h6>
 
 <div class="demo">
-  <table class="table 練習">
+  <table class="table table-borderless">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -450,7 +450,7 @@ $theme-colors: (
 </h6>
 
 <div class="demo">
-  <table class="table 練習">
+  <table class="table table-sm">
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -491,7 +491,7 @@ $theme-colors: (
 </h6>
 
 <div class="demo">
-  <table class="table 練習">
+  <table class="table align-middle">
     <thead>
       <tr>
         <th scope="col" class="w-25">Heading 1</th>
@@ -576,7 +576,7 @@ $theme-colors: (
       </tr>
       <tr>
         <td colspan="4">
-          <table class="練習 mb-0">
+          <table class="table mb-0">
             <thead>
               <tr>
                 <th scope="col">Header</th>
@@ -623,7 +623,7 @@ $theme-colors: (
 
 <div class="demo">
   <table class="table">
-    <thead class="練習">
+    <thead class="table-dark">
       <tr>
         <th scope="col">#</th>
         <th scope="col">First</th>
@@ -656,7 +656,7 @@ $theme-colors: (
 
 <div class="demo">
   <table class="table">
-    <thead class="練習">
+    <thead class="table-light">
       <tr>
         <th scope="col">#</th>
         <th scope="col">First</th>
@@ -722,12 +722,12 @@ $theme-colors: (
           <td>@twitter</td>
         </tr>
       </tbody>
-      <練習>
+      <tfoot>
         <td>Footer</td>
         <td>Footer</td>
         <td>Footer</td>
         <td>Footer</td>
-      </練習>
+      </tfoot>
     </table>
   </div>
 </div>
@@ -740,9 +740,9 @@ $theme-colors: (
 
 <div class="demo">
   <table class="table">
-    <!--<練習>
+    <caption>
       List of users
-    </練習>-->
+    </caption>
     <thead>
       <tr>
         <th scope="col">#</th>
@@ -779,7 +779,7 @@ $theme-colors: (
 </h6>
 
 <div class="demo">
-  <table class="table 練習">
+  <table class="table caption-top">
     <caption>
       List of users
     </caption>
@@ -827,7 +827,7 @@ $theme-colors: (
 <h6><code>.table-responsive</code> 可讓表格水平滾動來跨斷點使用。</h6>
 
 <div class="demo">
-  <div class="練習">
+  <div class="table-responsive">
     <table class="table">
       <thead>
         <tr>
@@ -898,7 +898,7 @@ $theme-colors: (
 <b>這些表格可能會跑版，直到它們的響應樣式應用於特定的視窗寬度。</b>
 
 <div class="demo">
-  <div class="table-responsive-練習">
+  <div class="table-responsive-xl">
     <table class="table">
       <thead>
         <tr>
@@ -959,6 +959,10 @@ $theme-colors: (
     </table>
   </div>
 </div>
+如果想要讓表格th有像excel的凍結表格
+可以參考: 
+<a href="https://css-tricks.com/position-sticky-and-table-headers/"> https://css-tricks.com/position-sticky-and-table-headers/</a><br>
+使用posion:sticky;來實作
 
 <!-- 🙇🙇練習結束🙇🙇 -->
 </main>
