--- a/utilities/spacing.html
+++ b/utilities/spacing.html
@@ -47,33 +47,33 @@
 <p>為以下區塊推移不同水平距離</p>
 
 <div class="demo d-flex">
-  <div class="box 練習"></div>
+  <div class="box mx-3"></div>
   <div class="box"></div>
 </div>
 
 <p>為以下區塊推移垂直距離</p>
 
 <div class="demo">
-  <div class="box 練習"></div>
+  <div class="box mb-3"></div>
   <div class="box"></div>
 </div>
 
 <p>清除文字的向下 margin</p>
 
 <div class="demo">
-  <p class="練習">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt distinctio sint aspernatur, nihil quam commodi consequuntur rerum sapiente ratione, neque odit optio quos eligendi atque quas, expedita rem pariatur possimus.</p>
+  <p class="mb-0">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt distinctio sint aspernatur, nihil quam commodi consequuntur rerum sapiente ratione, neque odit optio quos eligendi atque quas, expedita rem pariatur possimus.</p>
 </div>
 
 <p>為按鈕加上更大的水平 padding</p>
 
 <div class="demo">
-  <button type="button" class="btn btn-primary 練習">我是按鈕</button>
+  <button type="button" class="btn btn-primary px-5">我是按鈕</button>
 </div>
 
 <h2>水平置中</h2>
 
 <div class="demo">
-  <div class="練習" style="width: 200px; background-color: rgba(86,61,124,.15);">
+  <div class="mx-auto" style="width: 200px; background-color: rgba(86,61,124,.15);">
     Centered element
   </div>
 </div>
