--- a/utilities/background.html
+++ b/utilities/background.html
@@ -29,17 +29,17 @@ $theme-colors: (
 </ul>
 
 <div class="demo">
-  <div class="p-3 mb-2 練習 text-white">.bg-primary</div>
-  <div class="p-3 mb-2 練習 text-white">.bg-secondary</div>
-  <div class="p-3 mb-2 練習 text-white">.bg-success</div>
-  <div class="p-3 mb-2 練習 text-white">.bg-danger</div>
-  <div class="p-3 mb-2 練習 text-dark">.bg-warning</div>
-  <div class="p-3 mb-2 練習 text-dark">.bg-info</div>
-  <div class="p-3 mb-2 練習 text-dark">.bg-light</div>
-  <div class="p-3 mb-2 練習 text-white">.bg-dark</div>
-  <div class="p-3 mb-2 練習 text-white">.bg-body</div>
-  <div class="p-3 mb-2 練習 text-dark">.bg-white</div>
-  <div class="p-3 mb-2 練習 text-dark">.bg-transparent</div>
+  <div class="p-3 mb-2 bg-primary text-white">.bg-primary</div>
+  <div class="p-3 mb-2 bg-secondary text-white">.bg-secondary</div>
+  <div class="p-3 mb-2 bg-success text-white">.bg-success</div>
+  <div class="p-3 mb-2 bg-danger text-white">.bg-danger</div>
+  <div class="p-3 mb-2 bg-warning text-dark">.bg-warning</div>
+  <div class="p-3 mb-2 bg-info text-dark">.bg-info</div>
+  <div class="p-3 mb-2 bg-light text-dark">.bg-light</div>
+  <div class="p-3 mb-2 bg-dark text-white">.bg-dark</div>
+  <div class="p-3 mb-2 bg-body text-white">.bg-body</div>
+  <div class="p-3 mb-2 bg-white text-dark">.bg-white</div>
+  <div class="p-3 mb-2 bg-transparent text-dark">.bg-transparent</div>
 </div>
 
 <h2>漸層色</h2>
@@ -47,17 +47,19 @@ $theme-colors: (
 <p>另外可加上 .bg-gradient 套用漸層色。<strong>注意：此功能預設不會開啟，需要調整變數才能啟用。</strong></p>
 
 <div class="demo">
-  <div class="p-3 mb-2 bg-primary 練習 text-white">.bg-primary</div>
-  <div class="p-3 mb-2 bg-secondary 練習 text-white">.bg-secondary</div>
-  <div class="p-3 mb-2 bg-success 練習 text-white">.bg-success</div>
-  <div class="p-3 mb-2 bg-danger 練習 text-white">.bg-danger</div>
-  <div class="p-3 mb-2 bg-warning 練習 text-dark">.bg-warning</div>
-  <div class="p-3 mb-2 bg-info 練習 text-dark">.bg-info</div>
-  <div class="p-3 mb-2 bg-light 練習 text-dark">.bg-light</div>
-  <div class="p-3 mb-2 bg-dark 練習 text-white">.bg-dark</div>
-  <div class="p-3 mb-2 bg-body 練習 text-white">.bg-body</div>
-  <div class="p-3 mb-2 bg-white 練習 text-dark">.bg-white</div>
-  <div class="p-3 mb-2 bg-transparent 練習 text-dark">.bg-transparent</div>
+  <div class="p-3 mb-2 bg-primary text-white">.bg-primary</div>
+
+  <div class="p-3 mb-2 bg-primary bg-gradient text-white">.bg-primary</div>
+  <div class="p-3 mb-2 bg-secondary bg-gradient text-white">.bg-secondary</div>
+  <div class="p-3 mb-2 bg-success bg-gradient text-white">.bg-success</div>
+  <div class="p-3 mb-2 bg-danger bg-gradient text-white">.bg-danger</div>
+  <div class="p-3 mb-2 bg-warning bg-gradient text-dark">.bg-warning</div>
+  <div class="p-3 mb-2 bg-info bg-gradient text-dark">.bg-info</div>
+  <div class="p-3 mb-2 bg-light bg-gradient text-dark">.bg-light</div>
+  <div class="p-3 mb-2 bg-dark bg-gradient text-white">.bg-dark</div>
+  <div class="p-3 mb-2 bg-body bg-gradient text-white">.bg-body</div>
+  <div class="p-3 mb-2 bg-white bg-gradient text-dark">.bg-white</div>
+  <div class="p-3 mb-2 bg-transparent bg-gradient text-dark">.bg-transparent</div>
 </div>
 <!-- 🙇🙇練習結束🙇🙇 -->
 </main>
