--- a/utilities/borders.html
+++ b/utilities/borders.html
@@ -23,11 +23,11 @@
 <p>對於無邊框來說可以加上 .border，或是 .border-{方向} 來加入 border。</p>
 
 <div class="demo">
-  <span class="練習 box"></span>
-  <span class="練習 box"></span>
-  <span class="練習 box"></span>
-  <span class="練習 box"></span>
-  <span class="練習 box"></span>
+  <span class="border box"></span>
+  <span class="border-top box"></span>
+  <span class="border-bottom box"></span>
+  <span class="border-start box"></span>
+  <span class="border-end box"></span>
 </div>
 
 <h4>減少</h4>
@@ -35,11 +35,11 @@
 <p>也可以加上 .border-0，或是 .border-{方向}-0 來移除 border。</p>
 
 <div class="demo">
-  <span class="練習 box border"></span>
-  <span class="練習 box border"></span>
-  <span class="練習 box border"></span>
-  <span class="練習 box border"></span>
-  <span class="練習 box border"></span>
+  <span class="border-0 box border"></span>
+  <span class="border-top-0 box border"></span>
+  <span class="border-bottom-0 box border"></span>
+  <span class="border-start-0 box border"></span>
+  <span class="border-end-0 box border"></span>
 </div>
 
 <h2>邊框顏色</h2>
@@ -47,15 +47,15 @@
 <p>使用 .border-{情境色彩} 來加入 border 的顏色</p>
 
 <div class="demo">
-  <span class="border 練習 box"></span>
-  <span class="border 練習 box"></span>
-  <span class="border 練習 box"></span>
-  <span class="border 練習 box"></span>
-  <span class="border 練習 box"></span>
-  <span class="border 練習 box"></span>
-  <span class="border 練習 box"></span>
-  <span class="border 練習 box"></span>
-  <span class="border 練習 box"></span>
+  <span class="border border-primary box"></span>
+  <span class="border border-secondary box"></span>
+  <span class="border border-info box"></span>
+  <span class="border border-success box"></span>
+  <span class="border border-danger box"></span>
+  <span class="border border-primary box"></span>
+  <span class="border border-dark box"></span>
+  <span class="border border-light box"></span>
+  <span class="border border-warning box"></span>
 </div>
 
 <h2>邊框寬度</h2>
@@ -63,11 +63,11 @@
 <p>使用 .border-{ 1-5 數值} 來調整邊框寬度</p>
 
 <div class="demo">
-  <span class="border 練習 box"></span>
-  <span class="border 練習 box"></span>
-  <span class="border 練習 box"></span>
-  <span class="border 練習 box"></span>
-  <span class="border 練習 box"></span>
+  <span class="border border-1 box"></span>
+  <span class="border border-2 box"></span>
+  <span class="border border-3 box"></span>
+  <span class="border border-4 box"></span>
+  <span class="border border-5 box"></span>
 </div>
 
 <h2>Border-radius</h2>
@@ -75,13 +75,13 @@
 <p>可以加上 .rounded，或是 .rounded-{方向} 來加入 圓角。以及使用 .rounded-pill、..rounded-circle 來製作不同圓的樣式</p>
 
 <div class="demo">
-  <img src="https://fakeimg.pl/75x75/?text=75x75" class="練習" style="margin: 0.5rem;" alt="...">
-  <img src="https://fakeimg.pl/75x75/?text=75x75" class="練習" style="margin: 0.5rem;" alt="...">
-  <img src="https://fakeimg.pl/75x75/?text=75x75" class="練習" style="margin: 0.5rem;" alt="...">
-  <img src="https://fakeimg.pl/75x75/?text=75x75" class="練習" style="margin: 0.5rem;" alt="...">
-  <img src="https://fakeimg.pl/75x75/?text=75x75" class="練習" style="margin: 0.5rem;" alt="...">
-  <img src="https://fakeimg.pl/75x75/?text=75x75" class="練習" style="margin: 0.5rem;" alt="...">
-  <img src="https://fakeimg.pl/150x75/?text=150x75" class="練習" style="margin: 0.5rem;" alt="...">
+  <img src="https://fakeimg.pl/75x75/?text=75x75" class="rounded" style="margin: 0.5rem;" alt="...">
+  <img src="https://fakeimg.pl/75x75/?text=75x75" class="rounded-top" style="margin: 0.5rem;" alt="...">
+  <img src="https://fakeimg.pl/75x75/?text=75x75" class="rounded-bottom" style="margin: 0.5rem;" alt="...">
+  <img src="https://fakeimg.pl/75x75/?text=75x75" class="rounded-start" style="margin: 0.5rem;" alt="...">
+  <img src="https://fakeimg.pl/75x75/?text=75x75" class="rounded-end" style="margin: 0.5rem;" alt="...">
+  <img src="https://fakeimg.pl/75x75/?text=75x75" class="rounded-circle" style="margin: 0.5rem;" alt="...">
+  <img src="https://fakeimg.pl/150x75/?text=150x75" class="rounded-pill" style="margin: 0.5rem;" alt="...">
 </div>
 
 <h4>尺寸</h4>
@@ -89,10 +89,10 @@
 <p>可以加上 .rounded-{ 0-3 } 來調整 圓角 大小。</p>
 
 <div class="demo">
-  <img src="https://fakeimg.pl/75x75/?text=75x75" class="練習" style="margin: 0.5rem;" alt="...">
-  <img src="https://fakeimg.pl/75x75/?text=75x75" class="練習" style="margin: 0.5rem;" alt="...">
-  <img src="https://fakeimg.pl/75x75/?text=75x75" class="練習" style="margin: 0.5rem;" alt="...">
-  <img src="https://fakeimg.pl/75x75/?text=75x75" class="練習" style="margin: 0.5rem;" alt="...">
+  <img src="https://fakeimg.pl/75x75/?text=75x75" class="rounded-0" style="margin: 0.5rem;" alt="...">
+  <img src="https://fakeimg.pl/75x75/?text=75x75" class="rounded-1" style="margin: 0.5rem;" alt="...">
+  <img src="https://fakeimg.pl/75x75/?text=75x75" class="rounded-2" style="margin: 0.5rem;" alt="...">
+  <img src="https://fakeimg.pl/75x75/?text=75x75" class="rounded-3" style="margin: 0.5rem;" alt="...">
 </div>
 <!-- 🙇🙇練習結束🙇🙇 -->
 </main>
