--- a/utilities/float.html
+++ b/utilities/float.html
@@ -25,10 +25,19 @@
 
 <div class="demo">
   <p>
-    <img src="https://images.unsplash.com/photo-1630343710506-89f8b9f21d31?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60" class="練習" alt="">
+    <img src="https://images.unsplash.com/photo-1630343710506-89f8b9f21d31?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60" class="float-start me-3 mb-3" alt="">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, ut vitae eaque ipsa porro corporis ipsam in reiciendis, culpa repudiandae delectus natus incidunt. Doloremque rem culpa fugiat veritatis cumque quam.
     Atque minima excepturi nesciunt magni itaque nihil facere commodi, deleniti numquam dolore, doloremque modi quibusdam iure nobis sed exercitationem vel, eos suscipit quam! Totam sint quae, officiis sit harum modi.
     Vero ipsum, tempore unde nam deleniti laboriosam accusantium aliquid eos minima dicta id, aperiam reiciendis maiores porro quis obcaecati! Quasi quae, doloremque amet molestias rem sit ipsam necessitatibus consequatur id.</p>
+</div>
+
+<div class="demo">
+  <p>
+    <img src="https://images.unsplash.com/photo-1630343710506-89f8b9f21d31?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw5fHx8ZW58MHx8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=300&q=60" class="float-end ms-3 mb-3" alt="">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, ut vitae eaque ipsa porro corporis ipsam in reiciendis, culpa repudiandae delectus natus incidunt. Doloremque rem culpa fugiat veritatis cumque quam.
+    Atque minima excepturi nesciunt magni itaque nihil facere commodi, deleniti numquam dolore, doloremque modi quibusdam iure nobis sed exercitationem vel, eos suscipit quam! Totam sint quae, officiis sit harum modi.
+    Vero ipsum, tempore unde nam deleniti laboriosam accusantium aliquid eos minima dicta id, aperiam reiciendis maiores porro quis obcaecati! Quasi quae, doloremque amet molestias rem sit ipsam necessitatibus consequatur id.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio rem fuga quis tempora repudiandae, eos similique ea sed vero ad.</p>
 </div>
 
 
@@ -36,7 +45,7 @@
 
 <p>為以下元素套用 clearfix</p>
 
-<div class="demo 練習">
+<div class="demo clearfix">
   <div class="box float-start"></div>
   <div class="box float-end"></div>
 </div>
