interactions finished ( pointer )

--- a/utilities/Interactions.html
+++ b/utilities/Interactions.html
@@ -5,15 +5,15 @@
 <h2>Text selection</h2>
 
 <div class="demo">
-  <p class="練習">套用 .user-select-all，當使用者點選時，這個段落將會被全選。</p>
-  <p class="練習">套用 .user-select-auto，這個段落具有預設的選取行為。</p>
-  <p class="練習">套用 .user-select-none 當使用者點選的時候，此段落將不會被選取</p>
+  <p class="user-select-all">套用 .user-select-all，當使用者點選時，這個段落將會被全選。</p>
+  <p class="user-select-auto">套用 .user-select-auto，這個段落具有預設的選取行為。</p>
+  <p class="user-select-none">套用 .user-select-none 當使用者點選的時候，此段落將不會被選取</p>
 </div>
 
 <h2>Pointer events</h2>
 
 <div class="demo">
-  <p>套用 .pe-none <a href="#" class="練習" tabindex="-1" aria-disabled="true">這個連結</a> 不可被點選</p>
+  <p>套用 .pe-none <a href="#" class="pe-none" tabindex="-1" aria-disabled="true">這個連結</a> 不可被點選</p>
   <p><a href="#" class="pe-auto">這個連結</a> 可以被點選 (此為預設行為).</p>
   <p class="pe-none"><a href="#" tabindex="-1" aria-disabled="true">這個連結</a> 無法被點選，因為其 <code>pointer-events</code> 屬性繼承自父層。然而 <a href="#" class="pe-auto">這個連結</a> 具有 <code>pe-auto</code> 類別，因此可以被點選。</p>
 </div>
