--- a/utilities/overflow.html
+++ b/utilities/overflow.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Overflow</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Overflow</h1><small>檔名：<code>overflow.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Overflow</h1><small > 檔名：<code>overflow.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 
 <style>
@@ -20,32 +20,33 @@
 
 <div class="demo d-flex">
   <div
-    class="練習 box">
+    class="overflow-auto box">
     這個範例在本身就具有寬高的元素上設定
     <code>.overflow-auto</code>。透過設計，此內容將會垂直滾動。
   </div>
   <div
-    class="練習 box">
+    class="overflow-hidden box">
     這個範例在本身就具有寬高的元素上設定 <code>.overflow-hidden</code>
   </div>
   <div
-    class="練習 box">
-    這個範例在本身就具有寬高的元素上設定 <code>.overflow-visible</code>。
+    class="overflow-visible box">
+    這個範例在本身就具有寬高的元素上設定 該段文字一定會被顯示 <code>.overflow-visible</code>。
   </div>
   <div
-    class="練習 box">
+    class="overflow-scroll box">
     這個範例在本身就具有寬高的元素上設定 <code>.overflow-scroll</code>。
   </div>
 </div>
 
 <hr>
 
-<h2>實戰技巧</h2>
+<h2> 實戰技巧 </h2>
 
-<p>使用 overflow-auto 製作水平滾動項目</p>
+<p> 使用 overflow-auto 製作水平滾動項目 </p>
 
+<!-- flex-nowrap 很重要必須要加 (必須要讓它不會換行) -->
 <div class="demo">
-  <ul class="list-unstyled d-flex justify-content-between flex-nowrap">
+  <ul class="list-unstyled d-flex justify-content-between flex-nowrap overflow-auto">
     <li class="p-3 text-nowrap">Content</li>
     <li class="p-3 text-nowrap">Grid System</li>
     <li class="p-3 text-nowrap">Utilities</li>
@@ -214,7 +215,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -227,7 +228,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -255,7 +256,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
