--- a/utilities/shadows.html
+++ b/utilities/shadows.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Shadows</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Shadows</h1><small>檔名：<code>shadows.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Shadows</h1><small > 檔名：<code>shadows.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 <h2>Examples</h2>
 
-<p>為以下方框加入不同等級陰影</p>
+<p> 為以下方框加入不同等級陰影 </p>
 
 <ul>
   <li>shadow-none</li>
@@ -14,19 +14,19 @@
 </ul>
 
 <div class="demo">
-  <div class="練習 p-3 mb-5 bg-light rounded">No shadow</div>
-  <div class="練習 p-3 mb-5 bg-white rounded">Small shadow</div>
-  <div class="練習 p-3 mb-5 bg-white rounded">Regular shadow</div>
-  <div class="練習 p-3 mb-5 bg-white rounded">Larger shadow</div>
+  <div class="shadow-none p-3 mb-5 bg-light rounded">No shadow</div>
+  <div class="shadow-sm p-3 mb-5 bg-white rounded">Small shadow</div>
+  <div class="shadow p-3 mb-5 bg-white rounded">Regular shadow</div>
+  <div class="shadow-lg p-3 mb-5 bg-white rounded">Larger shadow</div>
 </div>
 
-<h2>案例說明：</h2>
+<h2> 案例說明：</h2>
 
-<p>請千萬不要把陰影加在格線上</p>
+<p> 請千萬不要把陰影加在格線上 </p>
 
 <div class="row">
   <div class="col-4">
-    <div class="card 練習">
+    <div class="card shadow">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
@@ -36,7 +36,7 @@
       </div>
     </div>
   </div>
-  <div class="col-4 練習"><!-- 錯誤案例 -->
+  <div class="col-4 shadow"><!-- 錯誤案例 -->
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
@@ -61,12 +61,12 @@
 </div>
 
 
-<h2>陰影的運用</h2>
+<h2> 陰影的運用 </h2>
 
-<p>很棒的陰影運用文章：<a href="https://material-design.hexschool.io/environment/elavation.html#material-design-%E4%B8%AD%E7%9A%84%E5%B1%A4%E9%AB%98">https://material-design.hexschool.io/environment/elavation.html#material-design-%E4%B8%AD%E7%9A%84%E5%B1%A4%E9%AB%98</a></p>
+<p> 很棒的陰影運用文章：<a href="https://material-design.hexschool.io/environment/elavation.html#material-design-% E4% B8% AD% E7%9A%84% E5% B1% A4% E9% AB%98">https://material-design.hexschool.io/environment/elavation.html#material-design-% E4% B8% AD% E7%9A%84% E5% B1% A4% E9% AB%98</a></p>
 
 <div class="demo position-relative">
-  <nav class="navbar navbar-light bg-light 練習 position-absolute top-0 start-0 end-0" style="z-index: 1;">
+  <nav class="navbar navbar-light bg-light shadow position-absolute top-0 start-0 end-0" style="z-index: 1;">
     <div class="container-fluid">
       <span class="navbar-text">
         Navbar text with an inline element
@@ -74,7 +74,7 @@
     </div>
   </nav>
 
-  <div class="card 練習 mt-5 border-0">
+  <div class="card shadow-lg mt-5 border-0">
     <div class="card-body">
       <h5 class="card-title">Card title</h5>
       <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
@@ -254,7 +254,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -267,7 +267,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -295,7 +295,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
