--- a/utilities/sizing.html
+++ b/utilities/sizing.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Sizing</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Sizing</h1><small>檔名：<code>sizing.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Sizing</h1><small > 檔名：<code>sizing.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 <h2>Relative to the parent</h2>
-<h6>分別加入 <code>25%, 50%, 75%, 100%</code> 和 <code>auto</code></h6>
+<h6> 分別加入 <code>25%, 50%, 75%, 100%</code> 和 <code>auto</code></h6>
 
 <div class="demo">
-  <div class="練習 p-3" style="background-color: #eee;">Width 25%</div>
-  <div class="練習 p-3" style="background-color: #eee;">Width 50%</div>
-  <div class="練習 p-3" style="background-color: #eee;">Width 75%</div>
-  <div class="練習 p-3" style="background-color: #eee;">Width 100%</div>
-  <div class="練習 p-3" style="background-color: #eee;">Width auto</div>
+  <div class="w-25 p-3" style="background-color: #eee;">Width 25%</div>
+  <div class="w-50 p-3" style="background-color: #eee;">Width 50%</div>
+  <div class="w-75 p-3" style="background-color: #eee;">Width 75%</div>
+  <div class="w-100 p-3" style="background-color: #eee;">Width 100%</div>
+  <div class="w-auto p-3" style="background-color: #eee;">Width auto</div>
 </div>
 
 <div class="demo">
   <div style="height: 100px; background-color: rgba(255,0,0,0.1);">
-    <div class="練習 d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height 25%</div>
-    <div class="練習 d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height 50%</div>
-    <div class="練習 d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height 75%</div>
-    <div class="練習 d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height 100%</div>
-    <div class="練習 d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height auto</div>
+    <div class="h-25 d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height 25%</div>
+    <div class="h-50 d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height 50%</div>
+    <div class="h-75 d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height 75%</div>
+    <div class="h-100 d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height 100%</div>
+    <div class="h-auto d-inline-block" style="width: 120px; background-color: rgba(0,0,255,.1)">Height auto</div>
   </div>
 </div>
 
-<h2>實戰運用</h2>
+<h2> 實戰運用 </h2>
 
-<p>讓你的卡片等高呈現</p>
+<p> 讓你的卡片等高呈現 </p>
 
 <div class="demo">
   <div class="row">
     <div class="col-6">
-      <div class="card 練習">
+      <div class="card h-100">
         <div class="card-header">
           Featured
         </div>
@@ -47,7 +47,7 @@
       </div>
     </div>
     <div class="col-6">
-      <div class="card">
+      <div class="card h-100">
         <div class="card-header">
           Featured
         </div>
@@ -68,24 +68,24 @@
 </div>
 
 
-<h4>還可以根據需求使用 <code>max-width: 100%;</code> 和 <code>max-height: 100%;</code> 通用類別</h4>
+<h4> 還可以根據需求使用 <code>max-width: 100%;</code> 和 <code>max-height: 100%;</code> 通用類別 </h4>
 
 <div class="demo">
-  <img src="https://images.unsplash.com/photo-1580912534328-fbc00d6f7e9f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=747&q=80" class="練習" alt="">
+  <img src="https://images.unsplash.com/photo-1580912534328-fbc00d6f7e9f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=747&q=80" class="mw-100" alt="">
 </div>
 
 <div class="demo">
   <div style="height: 100px; background-color: rgba(255,0,0,.1);">
-    <div class="練習" style="width: 100px; height: 200px; background-color: rgba(0,0,255,.1);">Max-height 100%</div>
+    <div class="mh-100" style="width: 100px; height: 200px; background-color: rgba(0,0,255,.1);">Max-height 100%</div>
   </div>
 </div>
 
-<h2>相對於視窗</h2>
+<h2> 相對於視窗 </h2>
 
 <p>vh, vw 以及 min</p>
 
-<div class="demo 練習">
-  <!-- <div class="box bg-bs5 h-100"></div> -->
+<div class="demo vw-100 vh-100">
+  <div class="box bg-bs5 h-100"></div>
 </div>
 <!-- 🙇🙇練習結束🙇🙇 -->
 </main>
@@ -247,7 +247,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -260,7 +260,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -288,7 +288,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
