--- a/utilities/text.html
+++ b/utilities/text.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html><html lang="zh-TW"><head><title>Text</title><meta name="viewport" content="width=device-width, initial-scale=1"><link href="images/favicon.ico" rel="shortcut icon"><meta charset="UTF-8"><script src="/javascripts/vendor.js"></script></head><body class="bg-lighter">
 <div class="container main my-5"><div class="row justify-content-center"><main class="col-md-8 post">
-<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Text</h1><small>檔名：<code>text.html</code></small></div>
+<!-- 章節標題 --><div class="mb-4"><h1 class="mt-0 text-muted">Text</h1><small > 檔名：<code>text.html</code></small></div>
 <!-- 🔥🔥練習開始🔥🔥 -->
 <h2>Text alignment</h2>
 
-<p>加入 text-{start, center, end}</p>
+<p> 加入 text-{start, center, end}</p>
 
 <div class="demo">
-  <p class="練習">Start aligned text on all viewport sizes.</p>
-  <p class="練習">Center aligned text on all viewport sizes.</p>
-  <p class="練習">End aligned text on all viewport sizes.</p>
+  <p class="text-start">Start aligned text on all viewport sizes.</p>
+  <p class="text-center">Center aligned text on all viewport sizes.</p>
+  <p class="text-end">End aligned text on all viewport sizes.</p>
 </div>
 
-<p>中斷點示範：</p>
+<p> 中斷點示範：</p>
 
 <ul>
-  <li>桌面版靠左</li>
-  <li>行動版置中</li>
+  <li> 行動版置中 </li>
+  <li> 桌面版靠左 </li>
 </ul>
 
 <div class="demo">
-  <p class="練習">請調整此段文字的對齊</p>
+  <p class="text-center text-lg-start"> 請調整此段文字的對齊 </p>
 </div>
 
 <h2>Text wrapping and overflow</h2>
 
-<h4>使用 <code>.text-wrap</code> 類別來斷行文字</h4>
+<h4> 使用 <code>.text-wrap</code> 類別來斷行文字 </h4>
 <div class="demo">
-  <div class="badge bg-primary 練習" style="width: 6rem;">
+  <div class="badge bg-primary text-wrap" style="width: 6rem;">
     This text should wrap.
   </div>
 </div>
 
-<h4>可搭配 <code>.text-nowrap</code> 類別防止換行</h4>
+<h4> 可搭配 <code>.text-nowrap</code> 類別防止換行 </h4>
 <div class="demo">
-  <div class="練習" style="width: 8rem; background-color: rgba(86,61,124,0.15);">
+  <div class="text-nowrap" style="width: 8rem; background-color: rgba (86,61,124,0.15);">
     This text should overflow the parent.
   </div>
 </div>
 
 <h2>Word break</h2>
 
-<h6>使用 <code>.text-break</code> 設定 <code>word-wrap: break-word</code> 和 <code>word-break: break-word</code> 預防長文破壞元件的排版</h6>
+<h6> 使用 <code>.text-break</code> 設定 <code>word-wrap: break-word</code> 和 <code>word-break: break-word</code> 預防長文破壞元件的排版 </h6>
 <div class="demo">
-  <p class="練習">mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm</p>
+  <p class="text-break">mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmm</p>
 </div>
 
 <h2>Text transform</h2>
@@ -53,32 +53,32 @@
   <p class="text-uppercase">Uppercased text.</p>
   <p class="text-capitalize">capiTaliZed text.</p>
 </div>
-<h6>請注意 <code>.text-capitalize</code> 只有將第一個字母轉為大寫，而其他字母不受影響</h6>
+<h6> 請注意 <code>.text-capitalize</code> 只有將第一個字母轉為大寫，而其他字母不受影響 </h6>
 
 <h2>Font size</h2>
 
-<p>使用 fs-{ 1-6} 來調整文字大小</p>
+<p> 使用 fs-{ 1-6} 來調整文字大小 </p>
 
 <div class="demo">
-  <p class="練習">.fs-1 text</p>
-  <p class="練習">.fs-2 text</p>
-  <p class="練習">.fs-3 text</p>
-  <p class="練習">.fs-4 text</p>
-  <p class="練習">.fs-5 text</p>
-  <p class="練習">.fs-6 text</p>
+  <p class="fs-1">.fs-1 text</p>
+  <p class="fs-2">.fs-2 text</p>
+  <p class="fs-3">.fs-3 text</p>
+  <p class="fs-4">.fs-4 text</p>
+  <p class="fs-5">.fs-5 text</p>
+  <p class="fs-6">.fs-6 text</p>
 </div>
 
 <h2>Font weight and italics</h2>
 <h6><code>font-style</code> 通用類別的縮寫為 <code>.fst-*</code>， <code>font-weight</code> 通用類別的縮寫為 <code>.fw-*</code></h6>
 
 <div class="demo">
-  <p class="fw-bold">Bold text.</p>
-  <p class="fw-bolder">Bolder weight text (relative to the parent element).</p>
-  <p class="fw-normal">Normal weight text.</p>
-  <p class="fw-light">Light weight text.</p>
-  <p class="fw-lighter">Lighter weight text (relative to the parent element).</p>
-  <p class="fst-italic">Italic text.</p>
-  <p class="fst-normal">Text with normal font style</p>
+  <p class="fw-bold">Bold text. - fw-bold</p>
+  <p class="fw-bolder">Bolder weight text (relative to the parent element). - fw-bolder</p>
+  <p class="fw-normal">Normal weight text. - fw-normal</p>
+  <p class="fw-light">Light weight text. - fw-light</p>
+  <p class="fw-lighter">Lighter weight text (relative to the parent element). - fw-lighter</p>
+  <p class="fst-italic">Italic text. - fst-italic</p>
+  <p class="fst-normal">Text with normal font style - fst-normal</p>
 </div>
 
 <h2>Line height</h2>
@@ -97,22 +97,22 @@
 </div>
 
 <h2>Reset color</h2>
-<h6>使用 <code>.text-reset</code> 來重置一個文字或連結色彩，以便它們繼承父層的顏色</h6>
+<h6> 使用 <code>.text-reset</code> 來重置一個文字或連結色彩，以便它們繼承父層的顏色 </h6>
 
 <div class="demo">
   <p class="text-muted">
-    Muted text with a <a href="#" class="練習">reset link</a>.
+    Muted text with a <a href="#" class="text-reset">reset link</a>.
   </p>
 </div>
 
 <h2>Text decoration</h2>
 
-<p>加入 .text-decoration-{ underline, line-through, none } 改變文字裝飾。</p>
+<p> 加入 .text-decoration-{ underline, line-through, none } 改變文字裝飾。</p>
 
 <div class="demo">
-  <p class="練習">This text has a line underneath it.</p>
-  <p class="練習">This text has a line going through it.</p>
-  <a href="#" class="練習">This link has its text decoration removed</a>
+  <p class="text-decoration-underline">This text has a line underneath it.</p>
+  <p class="text-decoration-line-through">This text has a line going through it.</p>
+  <a href="#" class="text-decoration-none">This link has its text decoration removed</a>
 </div>
 <!-- 🙇🙇練習結束🙇🙇 -->
 </main>
@@ -274,7 +274,7 @@
     
     </div>
     <div class="mt-3 text-end p-2 bg-light rounded">
-      <small class="text-black-50 fw-light mb-0">文件版本：2022/01/20</small>
+      <small class="text-black-50 fw-light mb-0"> 文件版本：2022/01/20</small>
     </div>
   </ul>
 </div>
@@ -287,7 +287,7 @@
 
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-bs5 shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊</a>
+    <a class="navbar-brand" href="/">Bootstrap 5 練習手冊 </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -315,7 +315,7 @@
 
 <footer class="footer py-2 bg-light">
   <div class="container text-center">
-    <small class="text-black-50 fw-light mb-0">六角學院 Bootstrap 5 課程專屬文件</small>
+    <small class="text-black-50 fw-light mb-0"> 六角學院 Bootstrap 5 課程專屬文件 </small>
   </div>
 </footer>
 <link rel="stylesheet" href="/stylesheets/all.css">
