--- a/utilities/stretchedLink.html
+++ b/utilities/stretchedLink.html
@@ -12,9 +12,9 @@
     <div class="card" style="width: 18rem;">
         <img src="https://images.unsplash.com/photo-1580912534328-fbc00d6f7e9f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=747&q=80" class="card-img-top img-fluid" alt="..." >
         <div class="card-body">
-          <h5 class="card-title">帶有延伸連結的卡片</h5>
+          <h5 class="card-title"> 帶有延伸連結的卡片 </h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary 練習">Go somewhere</a>
+          <a href="#" class="btn btn-primary stretched-link">Go somewhere</a>
         </div>
     </div>
 </div>
